--- a/Nuages.Identity.UI/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/ChangePassword.cshtml
@@ -10,7 +10,7 @@
 
     <form method="POST" v-on:submit.prevent="changePassword" id="formChangePassword">
         <fieldset :disabled="status == 'sending'" class="space-y-4">
-            <span class="text-gray-500">@Localizer["changePassword:instructions"]</span>
+            <span class="instructions">@Localizer["changePassword:instructions"]</span>
 
             <div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done'" style="display: none">
                 <span class="green-success font-medium">
