--- a/Nuages.Identity.UI/Pages/Account/Manage/SetPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/SetPassword.cshtml
@@ -9,7 +9,7 @@
     <h2 class="page-header">@Localizer["setPassword.title"]</h2>
 
     <form class="space-y-4" method="POST" v-on:submit.prevent="setPassword" id="formSetPassword">
-        <span class="text-gray-500">@Localizer["setPassword:instructions"]</span>
+        <span class="instructions">@Localizer["setPassword:instructions"]</span>
         <partial name="Shared/ErrorList"/>
         <div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done'" style="display: none">
             <span class="green-success font-medium">
