--- a/Nuages.Identity.UI/Pages/Account/Manage/_Layout.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/_Layout.cshtml
@@ -4,7 +4,7 @@
 @inject IOptions<NuagesIdentityOptions> IdentityOptions
 
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
