--- a/Nuages.Identity.UI/Pages/Shared/_Layout.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 @inject IOptions<NuagesIdentityOptions> IdentityOptions
 
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en"  >
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -16,7 +16,7 @@
 
     <script src="https://www.google.com/recaptcha/api.js?render=@RecaptchaOptions.Value.SiteKey"></script>
 </head>
-<body class="dark">
+<body >
 
 <div class=" min-h-screen bg-gray-100 dark:bg-slate-900 flex flex-col justify-start py-12 sm:px-6 lg:px-8 " id="app">
     <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
@@ -38,5 +38,6 @@
 </environment>
 
 @RenderSection("Scripts", false)
+
 </body>
 </html>
