--- a/Nuages.Identity.UI/Pages/Shared/_PlaceHolder.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/_PlaceHolder.cshtml
@@ -1,3 +1,3 @@
-<span class="was-validated font-extrabold">DO NOT DELETE</span>
+<span class="was-validated font-extrabold dark">DO NOT DELETE</span>
 
 
