--- a/Nuages.Identity.UI/Pages/Account/LoginWith2fa.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWith2fa.cshtml
@@ -21,7 +21,7 @@
                 <div class="flex items-center justify-between">
                     <div class="flex items-center">
                         <input id="rememberMachine" name="rememberMachine" v-model="rememberMachine" type="checkbox" class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded">
-                        <label for="rememberMachine" class="ml-2 block text-sm text-gray-900">
+                        <label for="rememberMachine" class="ml-2 block text-sm">
                             @Localizer["mfa:rememberMachine"]
                         </label>
                     </div>
