--- a/Nuages.Identity.UI/Pages/Account/Manage/ExternalLogins.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/ExternalLogins.cshtml
@@ -37,7 +37,7 @@
 }
 @if (Model.OtherLogins?.Count > 0)
 {
-    <h3 class="text-xl font-extrabold text-gray-900 mb-4">@Localizer["externalLogins.addAnotherService"]</h3>
+    <h3 class="text-xl font-extrabold  mb-4">@Localizer["externalLogins.addAnotherService"]</h3>
 
     <form id="link-login-form" asp-page-handler="LinkLogin" method="post" class="form-horizontal">
         <div id="socialLoginList" class="grid grid-cols-5 gap-2">
