--- a/Nuages.Identity.UI/Pages/Shared/SeparatorWithTitle.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/SeparatorWithTitle.cshtml
@@ -4,7 +4,7 @@
     </div>
     <div class="relative flex justify-center text-sm">
         <span class="px-2 bg-white dark:bg-slate-900 text-gray-500 dark:text-white">
-           @Model.Title
+           @Model?.Title
         </span>
     </div>
 </div>
