--- a/Nuages.Identity.UI/Pages/_ViewImports.cshtml
+++ b/Nuages.Identity.UI/Pages/_ViewImports.cshtml
@@ -7,4 +7,5 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, WebOptimizer.Core
 
-@inject  IStringLocalizer Localizer
+@inject IStringLocalizer Localizer
+@inject Microsoft.AspNetCore.Antiforgery.IAntiforgery Antiforgery
