--- a/Nuages.Identity.UI/Pages/Account/ForgotPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ForgotPassword.cshtml
@@ -14,7 +14,7 @@
     </span>
 </div>
 
-<form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="forgotPassword" id="formforgotPassword" v-if="status != 'done'">
+<form class="space-y-4 mt-4"  v-on:submit.prevent="forgotPassword" id="formforgotPassword" v-if="status != 'done'">
     <span class="instructions">@Localizer["forgotPassword:instructions"]</span>
 
 
@@ -34,6 +34,7 @@
         var emailRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, Localizer["email"])";
         var emailInvalidMessage = "@Localizer["errorMessage:invalidEmail"]";
         var recaptcha = '@RecaptchaOptions.Value.SiteKey';
+        var xsrfToken = '@Antiforgery.GetAndStoreTokens(HttpContext).RequestToken';
     </script>
     <script src="/js/pages/forgotPassword.js"></script>
 }
