--- a/Nuages.Identity.UI/Pages/Account/LoginWithPasswordless.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWithPasswordless.cshtml
@@ -7,7 +7,7 @@
     ViewData["Title"] = Localizer["passwordLess:title"];
 }
 
-<form class="mt-4 space-y-4" method="POST" v-on:submit.prevent="sendPasswordlessInfo" id="formPasswordless">
+<form class="mt-4 space-y-4" v-on:submit.prevent="sendPasswordlessInfo" id="formPasswordless">
 
     <span class="instructions">@Localizer["passwordLess:instructions"]</span>
     <partial name="Shared/ErrorList"/>
@@ -33,6 +33,7 @@
         var emailRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, Localizer["email"])";
         var emailInvalidMessage = "@Localizer["errorMessage:invalidEmail"]";
         var recaptcha = '@RecaptchaOptions.Value.SiteKey';
+        var xsrfToken = '@Antiforgery.GetAndStoreTokens(HttpContext).RequestToken';
     </script>
     <script src="/js/pages/loginWithPasswordless.js"></script>
 }
