--- a/Nuages.Identity.UI/Pages/Account/LoginWithRecoveryCode.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWithRecoveryCode.cshtml
@@ -9,7 +9,7 @@
 }
 
 <div class="space-y-4">
-    <form class="mt-4" method="POST" v-on:submit.prevent="login" id="formLogin" autocomplete=“off”>
+    <form class="mt-4"  v-on:submit.prevent="login" id="formLogin" autocomplete=“off”>
         <fieldset class="space-y-4 " :disabled="status == 'sending'">
             <span class="instructions">@Localizer["recoveryCode.instructions"]</span>
             <partial name="Shared/ErrorList"/>
@@ -59,6 +59,7 @@
         var codeRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, "Code")";
         var recaptcha = '@RecaptchaOptions.Value.SiteKey';
         var returnUrl = '@Html.Raw(Model.ReturnUrl)';
+        var xsrfToken = '@Antiforgery.GetAndStoreTokens(HttpContext).RequestToken';
     </script>
 
     <script src="/js/pages/loginWithRecoveryCode.js"></script>
