--- a/Nuages.Identity.UI/Pages/Account/LoginWithSMS.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWithSMS.cshtml
@@ -8,7 +8,7 @@
 }
 
 <div >
-    <form class=" mt-4" method="POST" v-on:submit.prevent="login" id="formLogin" autocomplete=“off”>
+    <form class=" mt-4"  v-on:submit.prevent="login" id="formLogin" autocomplete=“off”>
         <fieldset class="space-y-4" :disabled="status == 'sending'">
             <span class="instructions">@Localizer["loginWithSMS.instructions"]</span>
             <partial name="Shared/ErrorList"/>
@@ -38,6 +38,7 @@
         var codeRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, "Code")";
         var recaptcha = '@RecaptchaOptions.Value.SiteKey';
         var returnUrl = '@Html.Raw(Model.ReturnUrl)';
+        var xsrfToken = '@Antiforgery.GetAndStoreTokens(HttpContext).RequestToken';
     </script>
 
     <script src="/js/pages/LoginWithSMS.js"></script>
