--- a/Nuages.Identity.UI/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -210,6 +210,7 @@
     var recoveryCodes = "@Model.RecoveryCodesString".split(",");
     var isRemembered = @Model.IsMachineRemembered.ToString().ToLower();
     var userName = "@Model.Username";
+    var xsrfToken = '@Antiforgery.GetAndStoreTokens(HttpContext).RequestToken';
     </script>
 
     <script src="/js/pages/fido2/helpers.js"></script>
