--- a/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ResetPassword.cshtml
@@ -12,7 +12,7 @@
 </div>
 
 
-<form class="space-y-4 mt-4" method="POST" v-on:submit.prevent="resetPassword" id="formResetPassword" v-if="status != 'done'">
+<form class="space-y-4 mt-4"  v-on:submit.prevent="resetPassword" id="formResetPassword" v-if="status != 'done'">
     <span class="instructions">@ViewData["Instructions"]</span>
     <partial name="Shared/ErrorList"/>
 
@@ -49,6 +49,7 @@
         var recaptcha = '@RecaptchaOptions.Value.SiteKey';
         var code = '@ViewData["code"]';
         var emailInitialValue = '@ViewData["email"]'
+        var xsrfToken = '@Antiforgery.GetAndStoreTokens(HttpContext).RequestToken';
     </script>
 
     <script src="/js/pages/resetPassword.js"></script>
