--- a/Nuages.Identity.UI/Pages/Account/Login.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Login.cshtml
@@ -26,7 +26,7 @@
 }
 
 <div >
-    <form class="mt-4" method="POST" v-on:submit.prevent="login" id="formLogin" autocomplete=“off”>
+    <form class="mt-4"  v-on:submit.prevent="login" id="formLogin" autocomplete=“off”>
         @Html.AntiForgeryToken()
      
         <fieldset class="space-y-4" :disabled="status == 'sending'">
