--- a/Nuages.Identity.UI/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/ChangePassword.cshtml
@@ -8,7 +8,7 @@
 <div id="app">
     <h2 class="page-header">@Localizer["changePassword:title"]</h2>
 
-    <form method="POST" v-on:submit.prevent="changePassword" id="formChangePassword">
+    <form  v-on:submit.prevent="changePassword" id="formChangePassword">
         <fieldset :disabled="status == 'sending'" class="space-y-4">
             <span class="instructions">@Localizer["changePassword:instructions"]</span>
 
@@ -42,7 +42,7 @@
         var currentPasswordRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, Localizer["changePassword:currentPassword"])";
         var passwordRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, Localizer["changePassword:password"])";
         var passwordConfirmRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, Localizer["changePassword:passwordConfirm"])";
-    
+        var xsrfToken = '@Antiforgery.GetAndStoreTokens(HttpContext).RequestToken';
     </script>
 
     <script src="/js/pages/manage/changePassword.js"></script>
