--- a/Nuages.Identity.UI/Pages/Account/Manage/Email.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/Email.cshtml
@@ -10,7 +10,7 @@
 <div id="app">
     <h2 class="page-header">@Localizer["changeEmail.title"]</h2>
 
-    <form method="POST" v-on:submit.prevent="changeEmail" id="formChangeEmail">
+    <form  v-on:submit.prevent="changeEmail" id="formChangeEmail">
         <fieldset :disabled="status == 'sending'" class="space-y-4">
             <span class="instructions">@Localizer["changeEmail:instructions"]</span>
             <div class="dark:text-white">
@@ -43,7 +43,7 @@
         var emailRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, Localizer["email"])";
         var emailInvalidMessage = "@Localizer["errorMessage:invalidEmail"]";
         var recaptcha = '@RecaptchaOptions.Value.SiteKey';
-        
+        var xsrfToken = '@Antiforgery.GetAndStoreTokens(HttpContext).RequestToken';
     </script>
     <script src="/js/pages/manage/email.js"></script>
 }
