--- a/Nuages.Identity.UI/Pages/Account/Manage/Phone.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/Phone.cshtml
@@ -8,7 +8,7 @@
 <div id="app">
     <h2 class="page-header">@Localizer["addPhone.title"]</h2>
 
-    <form method="POST" v-on:submit.prevent="addPhone" id="formAddPhone">
+    <form  v-on:submit.prevent="addPhone" id="formAddPhone">
         <fieldset :disabled="status == 'sending'" class="space-y-4">
             <div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done'" style="display: none">
                 <span class="green-success font-medium">
@@ -52,7 +52,7 @@
     <script>
         var phoneRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, Localizer["addPhone:newPhoneNumber"])";  
         var codeRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, "Code")";  
-         
+        var xsrfToken = '@Antiforgery.GetAndStoreTokens(HttpContext).RequestToken';
     </script>
     <script src="/js/pages/manage/phone.js"></script>
 }
