--- a/Nuages.Identity.UI/Pages/Account/Manage/SetPassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/SetPassword.cshtml
@@ -8,7 +8,7 @@
 <div id="app">
     <h2 class="page-header">@Localizer["setPassword.title"]</h2>
 
-    <form class="space-y-4" method="POST" v-on:submit.prevent="setPassword" id="formSetPassword">
+    <form class="space-y-4" v-on:submit.prevent="setPassword" id="formSetPassword">
         <span class="instructions">@Localizer["setPassword:instructions"]</span>
         <partial name="Shared/ErrorList"/>
         <div class="mb-4 p-4" v-if="status == 'done'" v-show="status == 'done'" style="display: none">
@@ -38,7 +38,7 @@
     <script>
         var passwordRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, Localizer["setPassword:password"])";
         var passwordConfirmRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, Localizer["setPassword:passwordConfirm"])";
-    
+        var xsrfToken = '@Antiforgery.GetAndStoreTokens(HttpContext).RequestToken';
     </script>
 
     <script src="/js/pages/manage/setPassword.js"></script>
