--- a/Nuages.Identity.UI/Pages/Account/Manage/Username.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/Username.cshtml
@@ -8,7 +8,7 @@
 <div id="app">
     <h2 class="page-header">@Localizer["changeUsername.title"]</h2>
 
-    <form method="POST" v-on:submit.prevent="changeUsername" id="formChangeUsername">
+    <form v-on:submit.prevent="changeUsername" id="formChangeUsername">
         <fieldset :disabled="status == 'sending'" class="space-y-4">
             <span class="instructions">@Localizer["changeUsername:instructions"]</span>
             <div class="dark:text-white">
@@ -40,6 +40,7 @@
     <script>
         var usernameRequiredMessage = "@string.Format(Localizer["errorMessage:required"]!, Localizer["username"])";  
         var currentUserName = "@Model.Username";
+        var xsrfToken = '@Antiforgery.GetAndStoreTokens(HttpContext).RequestToken';
     </script>
     <script src="/js/pages/manage/username.js"></script>
 }
