--- a/Nuages.Identity.UI/Pages/Shared/_Warning.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/_Warning.cshtml
@@ -1,14 +1,14 @@
-<div class="rounded-md bg-orange-50  p-4">
+<div class="rounded-md bg-orange-50  p-4 dark:bg-orange-600">
     <div class="flex">
         <div class="flex-shrink-0">
             <!-- Heroicon name: solid/exclamation -->
         </div>
         <div class="ml-3">
-            <h3 class=" font-medium text-orange-800">
+            <h3 class=" font-medium text-orange-800 dark:text-white">
 
                 @Model?.Title
             </h3>
-            <div class="mt-2  text-orange-700">
+            <div class="mt-2  text-orange-700 dark:text-white">
                 @Model?.Message
 
             </div>
