--- a/Nuages.Identity.UI/Pages/Account/ConfirmEmail.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/ConfirmEmail.cshtml
@@ -9,7 +9,7 @@
     <span class="green-success font-medium">
         <i class="fas fa-check"></i> @Model.StatusMessage
     </span>
-    <div class="text-center mt-4">
+    <div class="text-red-600 text-center mt-4">
         <a class="primary"  href="~/">@Localizer["login.back"]</a>
     </div>
    
