--- a/Nuages.Identity.UI/Pages/Connect/VerifyDone.cshtml
+++ b/Nuages.Identity.UI/Pages/Connect/VerifyDone.cshtml
@@ -10,8 +10,7 @@
     <div class="flex justify-center mt-6">
 
         <div class="flex flex-col">
-            <i class="fa fa-check-circle green-success fa-3x text-center"></i>
-            <span class="mt-4">@Localizer["device:success"]</span>
+            <span class="green-succes mt-4">@Localizer["device:success"]</span>
         </div>
     </div>
 }
@@ -20,7 +19,6 @@ else
     <div class="flex justify-center mt-6">
 
         <div class="flex flex-col">
-            <i class="fa fa-circle-xmark dark:text-red-500 text-red-700 fa-3x text-center"></i>
             <span class="mt-4">@Localizer["device:error"]</span>
         </div>
     </div>
