--- a/Nuages.Identity.UI/Pages/Account/LoginWithSecurityKey.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWithSecurityKey.cshtml
@@ -20,7 +20,13 @@
                 <i class="fas fa-spinner fa-spin"></i> @Localizer["loginWithSecurityKeys:waiting"]
             </span>
         </div>
-         <partial name="Shared/ErrorList"/>
+        <partial name="Shared/ErrorList"/>
+        
+        <div v-if="errors.length > 0" v-show="errors.length > 0" style="display: none">
+              <div class="text-red-600 text-center m-4">
+                    <button type="button" class="primary" v-on:click="retry">@Localizer["loginWithSecurityKeys.retry"]</button>
+                </div>
+        </div>
     </form>
     
     <div class="text-sm mt-4">
@@ -62,7 +68,6 @@
     </script>
 
     <script src="/js/pages/fido2/helpers.js"></script>
-    
     <script src="/js/pages/fido2/mfa.login.js"></script>
     <script src="/js/pages/loginWithSecurityKeys.js"></script>
 }
