--- a/Nuages.Identity.UI/Pages/Shared/BackToLogin.cshtml
+++ b/Nuages.Identity.UI/Pages/Shared/BackToLogin.cshtml
@@ -1,4 +1,4 @@
 
 <div class="mt-4">
-    <a href="~/"><i class="fas fa-angle-left"></i>&nbsp;@Localizer["login.back"]</a>
+    <a  asp-page="/Account/Login" asp-route-returnUrl="@Model.ReturnUrl"><i class="fas fa-angle-left"></i>&nbsp;@Localizer["login.back"]</a>
 </div>
