--- a/Nuages.Identity.UI/Pages/Account/LoginWithPasswordless.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWithPasswordless.cshtml
@@ -42,5 +42,7 @@
 
 @section MainFooter
 {
-    <partial name="Shared/BackToLogin"/>
+    <div class="mt-4">
+        <a  asp-page="/Account/Login" asp-route-returnUrl="@Model.ReturnUrl"><i class="fas fa-angle-left"></i>&nbsp;@Localizer["login.back"]</a>
+    </div>
 }
