--- a/Nuages.Identity.UI/Pages/Account/LoginWithSecurityKey.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/LoginWithSecurityKey.cshtml
@@ -50,7 +50,9 @@
 
 @section MainFooter
 {
-    <partial name="Shared/BackToLogin"/>
+    <div class="mt-4">
+        <a  asp-page="/Account/Login" asp-route-returnUrl="@Model.ReturnUrl"><i class="fas fa-angle-left"></i>&nbsp;@Localizer["login.back"]</a>
+    </div>
 }
 
 @section Scripts
