--- a/Nuages.Identity.UI/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Nuages.Identity.UI/Pages/Account/Manage/ChangePassword.cshtml
@@ -24,9 +24,9 @@
             <input id="password" name="password" type="password" v-model="password" placeholder="@Localizer["changePassword:password"]" autocomplete="current-password" required class="text-box ">
             <input id="passwordConfirm" name="passwordConfirm" type="password" v-model="passwordConfirm" placeholder="@Localizer["changePassword:passwordConfirm"]" autocomplete="current-password" required class="text-box ">
             <button v-on:click.prevent="changePassword" class="primary full items-center" :disabled="status == 'sending'">
-                @Localizer["changePassword:submit"]
+                @Localizer["changePassword:submit"]<i class="fas fa-spinner fa-spin ml-2" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
             </button>
-            <i class="fas fa-spinner fa-spin ml-2" v-if="status == 'sending'" v-show="status == 'sending'" style="display: none"></i>
+            
         </fieldset>
 
     </form>
